--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 html {
-  /*background: url('./assets/background.png') no-repeat center center fixed;*/
+  background: url('./assets/background.png') no-repeat center center fixed;
   background: url('https://github.com/Thinkful-Ed/js-dev-final-capstone-starter/blob/main/assets/background.png?raw=true') no-repeat center center fixed;
   box-sizing: border-box;
   -webkit-background-size: cover;
@@ -12,22 +12,27 @@ html {
 
 h1 {
   text-align: center;
-  font-size: 90px;
+  font-size: 45px;
   font-family: "Comic Sans MS", "Comic Sans", cursive;
-  color: white;
+  color: blue;
   -webkit-text-stroke: 2px black;
+  margin: 0px;
 }
 
 h2 {
   text-align: center;
-  font-size: 40px;
+  font-size: 30px;
   color: white;
   -webkit-text-stroke: 1px black;
+  margin: 0px;
 }
 
 #start {
     text-align: center;
-    font-size: 30px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 10px;
 }
 
 #timer{
@@ -40,7 +45,7 @@ h2 {
   display: flex;
   flex-wrap: wrap;
   margin: 0 auto;
-  /*cursor: url('./assets/mallet.png'), pointer;*/
+  cursor: url('./assets/mallet.png'), pointer;
 }
 
 .hole {
@@ -51,7 +56,7 @@ h2 {
 
 .hole:after {
   display: block;
-  /*background: url("./assets/hole.png") bottom center no-repeat;*/
+  background: url("./assets/hole.png") bottom center no-repeat;
   background: url("https://github.com/Thinkful-Ed/js-dev-final-capstone-starter/blob/main/assets/hole.png?raw=true") bottom center no-repeat;
   background-size:contain;
   content:'';
@@ -64,13 +69,13 @@ h2 {
 }
 
 .mole {
-  /*background:url('./assets/mole.png') bottom center no-repeat;*/
+  background:url('./assets/mole.png') bottom center no-repeat;
   background:url('https://github.com/Thinkful-Ed/js-dev-final-capstone-starter/blob/main/assets/mole.png?raw=true') bottom center no-repeat;
   background-size: 40%;
   position: absolute;
-  top: 100%;
-  width: 100%;
-  height: 100%;
+  top: 50%;
+  width: 50%;
+  height: 50%;
   /*transition: transform 0.5s;*/
   transition: all 1s;
   pointer-events:auto;
@@ -79,4 +84,19 @@ h2 {
 .hole.show .mole {
   top: 0;
   /*transform: scale(1.1);*/
+  @media only screen and (min-width: 768px) {
+    /* For desktop: */
+    .col-1 {width: 8.33%;}
+    .col-2 {width: 16.66%;}
+    .col-3 {width: 25%;}
+    .col-4 {width: 33.33%;}
+    .col-5 {width: 41.66%;}
+    .col-6 {width: 50%;}
+    .col-7 {width: 58.33%;}
+    .col-8 {width: 66.66%;}
+    .col-9 {width: 75%;}
+    .col-10 {width: 83.33%;}
+    .col-11 {width: 91.66%;}
+    .col-12 {width: 100%;}
+}
 }
