--- a/src/styles.css
+++ b/src/styles.css
@@ -26,7 +26,7 @@ h2 {
   -webkit-text-stroke: 1px black;
   margin: 0px;
 }
-
+/* Start button style */
 .start {
     text-align: center;
     font-size: 30px;
