--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,6 @@
 html {
-  /*background: url('./assets/galaxy.png') no-repeat center center fixed;*/
-  /*background: url('https://github.com/Thinkful-Ed/js-dev-final-capstone-starter/blob/main/assets/background.png?raw=true') no-repeat center center fixed;*/
- background: url('./assets/background/galaxy.png') no-repeat center center fixed;
+  background: url('./assets/background.png') no-repeat center center fixed;
+  background: url('https://github.com/Thinkful-Ed/js-dev-final-capstone-starter/blob/main/assets/background.png?raw=true') no-repeat center center fixed;
   box-sizing: border-box;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -13,7 +12,7 @@ html {
 
 h1 {
   text-align: center;
-  font-size: 45px;
+  font-size: 50px;
   font-family: "Comic Sans MS", "Comic Sans", cursive;
   color: blue;
   -webkit-text-stroke: 2px black;
@@ -23,48 +22,17 @@ h1 {
 h2 {
   text-align: center;
   font-size: 30px;
-  color: white;
-  -webkit-text-stroke: 1px black;
+  color:white;
+  -webkit-text-stroke: white;
   margin: 0px;
 }
-/* Start button style */
-.start {
+
+#start {
     text-align: center;
-    font-size: 30px;
-}
-
-}
-
-.startButton{
-  width: 100px;
-  height: 45px;
-  padding: 0 00px;
-  font-size: 16px;
-  text-transform: uppercase;
-  border-radius: 5px;
-  border: 2px solid  #345ce2;
-  background-color: #fb0cff;
-  color: #fff;
-box-shadow: 0 4px 12px rgba(0, 0, 0, 0);
-}
-
-/* Mallet and interactive movement coding*/
-.cursor{
-  height: 110px;
-  width: 100px;
-  position: absolute;
-  top: 50%; 
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-size: 100% 100%;
-  transition: transform 0.1s;
-  pointer-events: none; /* Set pointer-events to none to allow interactions with elements underneath */
-}
-
-
-.cursor.active{
-  transform: translate(-50%, -50%) rotate(45deg);
-  
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 15px;
 }
 
 #timer{
@@ -79,14 +47,13 @@ box-shadow: 0 4px 12px rgba(0, 0, 0, 0);
   margin: 0 auto;
   cursor: url('./assets/mallet.png'), pointer;
 }
-/* holes display */
+
 .hole {
   flex: 1 0 33.33%;
   overflow: hidden;
   position: relative;
 }
 
-/* Moles displayed to show up */
 .hole:after {
   display: block;
   background: url("./assets/hole.png") bottom center no-repeat;
