--- a/src/styles.css
+++ b/src/styles.css
@@ -12,28 +12,57 @@ html {
 
 h1 {
   text-align: center;
-  font-size: 50px;
+  font-size: 90px;
   font-family: "Comic Sans MS", "Comic Sans", cursive;
-  color: blue;
+  color: #81d4fa;
   -webkit-text-stroke: 2px black;
-  margin: 0px;
+  font-size: 2em; /* Example relative font size */
 }
 
 h2 {
   text-align: center;
-  font-size: 30px;
-  color:white;
-  -webkit-text-stroke: white;
-  margin: 0px;
+  font-size: 20px;
+  color: white;
+  -webkit-text-stroke: 1px black;
+}
+/* Start button style */
+.start {
+    text-align: center;
+    font-size: 30px;
 }
 
-#start {
-    text-align: center;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    font-size: 15px;
+.startButton{
+  width: 100px;
+  height: 45px;
+  padding: 0 00px;
+  font-size: 16px;
+  text-transform: uppercase;
+  border-radius: 5px;
+  border: 2px solid  #345ce2;
+  background-color: #27dde3;
+  color: #000000;
+box-shadow: 0 4px 12px rgba(0, 0, 0, 0);
 }
+
+/* Mallet and interactive movement coding*/
+.cursor{
+  height: 110px;
+  width: 100px;
+  position: absolute;
+  top: 50%; 
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-size: 100% 100%;
+  transition: transform 0.1s;
+  pointer-events: none; /* Set pointer-events to none to allow interactions with elements underneath */
+}
+
+
+.cursor.active{
+  transform: translate(-50%, -50%) rotate(45deg);
+  
+}
+
 
 #timer{
     color: blue;
@@ -45,18 +74,20 @@ h2 {
   display: flex;
   flex-wrap: wrap;
   margin: 0 auto;
-  cursor: url('./assets/mallet.png'), pointer;
+  /*cursor: url('./assets/mallet.png'), pointer;*/
 }
 
+/* holes display*/
 .hole {
   flex: 1 0 33.33%;
   overflow: hidden;
   position: relative;
 }
 
+/* Moles displayed to show up */
 .hole:after {
   display: block;
-  background: url("./assets/hole.png") bottom center no-repeat;
+  /*background: url("./assets/hole.png") bottom center no-repeat;*/
   background: url("https://github.com/Thinkful-Ed/js-dev-final-capstone-starter/blob/main/assets/hole.png?raw=true") bottom center no-repeat;
   background-size:contain;
   content:'';
@@ -69,13 +100,13 @@ h2 {
 }
 
 .mole {
-  background:url('./assets/mole.png') bottom center no-repeat;
+  /*background:url('./assets/mole.png') bottom center no-repeat;*/
   background:url('https://github.com/Thinkful-Ed/js-dev-final-capstone-starter/blob/main/assets/mole.png?raw=true') bottom center no-repeat;
   background-size: 40%;
   position: absolute;
-  top: 50%;
-  width: 50%;
-  height: 50%;
+  top: 100%;
+  width: 100%;
+  height: 100%;
   /*transition: transform 0.5s;*/
   transition: all 1s;
   pointer-events:auto;
@@ -83,20 +114,38 @@ h2 {
 
 .hole.show .mole {
   top: 0;
-  /*transform: scale(1.1);*/
-  @media only screen and (min-width: 768px) {
-    /* For desktop: */
-    .col-1 {width: 8.33%;}
-    .col-2 {width: 16.66%;}
-    .col-3 {width: 25%;}
-    .col-4 {width: 33.33%;}
-    .col-5 {width: 41.66%;}
-    .col-6 {width: 50%;}
-    .col-7 {width: 58.33%;}
-    .col-8 {width: 66.66%;}
-    .col-9 {width: 75%;}
-    .col-10 {width: 83.33%;}
-    .col-11 {width: 91.66%;}
-    .col-12 {width: 100%;}
+  *transform: scale(1.1);*/
 }
+
+/* Container will adjust content to screen */
+.container {
+  max-width: 1200px; /* Adjust the value as needed */
+  margin: 0 auto; /* Center the container */
+}
+
+@media (max-width: 768px) {
+  /* Styles for smaller screens (e.g., tablets) */
+}
+
+@media (max-width: 480px) {
+  /* Styles for even smaller screens (e.g., mobile devices) */
+}
+
+body {
+  background-size: cover; /* or contain, based on your preference */
+  font-size: 16px; /* Adjust as needed */
+}
+
+.game-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  width: 80%; /* Adjust as needed */
+  margin: 0 auto;
+}
+
+img {
+  max-width: 100%; /* Make images responsive */
+  height: auto;
 }
