--- a/src/styles.css
+++ b/src/styles.css
@@ -14,7 +14,7 @@ h1 {
   text-align: center;
   font-size: 90px;
   font-family: "Comic Sans MS", "Comic Sans", cursive;
-  color: #00008B;
+  color: blue;
   -webkit-text-stroke: 2px black;
   font-size: 2em; /* Example relative font size */
 }
