--- a/src/styles.css
+++ b/src/styles.css
@@ -15,7 +15,7 @@ h1 {
   font-size: 90px;
   font-family: "Comic Sans MS", "Comic Sans", cursive;
   color: blue;
-  -webkit-text-stroke: 2px black;
+  -webkit-text-stroke: 2px blue;
   font-size: 2em; /* Example relative font size */
 }
 
