--- a/src/styles.css
+++ b/src/styles.css
@@ -9,12 +9,12 @@ html {
   z-index:0;
   overflow: hidden;
 }
-
 h1 {
   text-align: center;
-  font-size: 100px;
+  font-size: 90px;
   font-family: "Comic Sans MS", "Comic Sans", cursive;
-  color: blue;
+  color: #81d4fa;
+  -webkit-text-stroke: 2px black;
   font-size: 2em; /* Example relative font size */
 }
 
@@ -23,6 +23,8 @@ h2 {
   font-size: 20px;
   color: white;
   -webkit-text-stroke: 1px black;
+}
+
 }
 /* Start button style */
 .start {
